# UWU

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  bUwUild.sh
.github/workflows/: c-cpp.yml
inc/: Core.hpp
inc/Parsing/: File.hpp  Parser.hpp
inc/Process/: Converter.hpp  Writter.hpp
rsrc/: amaya_header.txt  header.txt  keyword_list.txt
rsrc/C/: ADDUWU.txt  CHECKOWO.txt  CHECKUWU.txt  DIVIDUWU.txt  GIMMEEEE.txt  MOWODULOWO.txt  MUWUL.txt  PRINTOWO.txt  PRINTUWU.txt  SUWUB.txt  UWU.txt  WHILUWU.txt  YAMETEEE.txt  begin.txt
src/: Core.cpp  main.cpp
src/Parsing/: File.cpp  Parser.cpp
src/Process/: Converter.cpp  Writter.cpp
tests/: test_crit.cpp
